# xradios

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  makefile  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yaml  publish.yml
xradios/: __init__.py  __main__.py  cli.py  logger.py  style.css  ui.md  ui.py
xradios/core/: metadata.py  player.py  server.py  services.py
xradios/plugins/: plug_1_fm_amsterdam_trance_radio.py  plug_bbc_radio_1.py  stream.py
xradios/tui/: __init__.py  client.py  commands.py  constants.py  keybindings.py  layout.py  messages.py  services.py  styles.py  utils.py
xradios/tui/buffers/: command_line.py  display.py  listview.py  popup.py  prompt.py
xradios/tui/widget/: command_line.py  display.py  listview.py  popup.py  prompt.py  topbar.py
xradiosd/: __init__.py  metadata.py  player.py  server.py
xradiosd/plugins/: plug_1_fm_amsterdam_trance_radio.py  plug_bbc_radio_1.py  plug_rock_fm.py  stream.py
