[metadata]
name = xradios
version = attr: xradios.__version__
description = Search and play your favorite Internet radio station with xradios.
author = André P. Santos
author_email = andreztz@gmail.com
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
url = https://github.com/andreztz/xradios
keywords = player, radio, stations, radio-stations, terminal
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Sound/Audio :: Players
    Topic :: Utilities
project_urls =
    Source = https://github.com/andreztz/xradios/
    
[options]
python_requires = >=3.8
include_package_data = true
packages = find:
install_requires =
    prompt-toolkit >= 3.0.8
    notify-send >= 0.0.20 
    Pygments >= 2.7.3
    streamscrobbler3 >= 0.0.4
    python-mpv >= 0.5.2
    pyradios >= 0.0.22
    python-vlc >= 3.0.12118
    pluginbase >= 1.0.1
    

[options.entry_points]
console_scripts =
    xradios = xradios.__main__:main
    xradiosd = xradios.core.server:main
