[metadata]
name = xradios
version = attr: xradios.__version__
description = Search and play your favorite Internet radio station.
author = André P. Santos
author_email = andreztz@gmail.com
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
url = https://github.com/andreztz/xradios
keywords = player, radio, stations, radio-stations, terminal
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Sound/Audio :: Players
    Topic :: Utilities
project_urls =
    Source = https://github.com/andreztz/xradios/

[options]
python_requires = >=3.8
include_package_data = true
packages = find:
install_requires =
    appdirs == 1.4.4
    prompt_toolkit==3.0.47
    Pygments==2.18.0
    streamscrobbler3 == 0.0.4
    python-mpv == 1.0.6
    pyradios == 2.1.0
    python-vlc==3.0.20123
    pluginbase == 1.0.1
    tinydb==4.8.0
    cmd-parser == 0.0.1.dev2
    setuptools==70.0.0
    jsonrpclib-pelix==0.4.3.4

[options.extras_require]
dev =
    flake8
    pre-commit
    build

notify-send =
    notify-send == 1.1.2

[options.entry_points]
console_scripts =
    xradios = xradios.__main__:main
    xradiosd = xradios.core.server:main
